@@ -1,3 +1,8 @@
+2008-10-14  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/38033
+	* gfortran.dg/array_section_2.f90: New test.
+
 2008-11-14  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/38104
