@@ -1,3 +1,11 @@
+2008-10-14  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/38033
+	* trans-array.c (gfc_trans_create_temp_array): Stabilize the
+	'to' expression.
+	(gfc_conv_loop_setup): Use the end expression for the loop 'to'
+	if it is available.
+
 2008-11-12  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/35366
